--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Agregamos esta dependencia para poder utilizar SUITE -->
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-runner</artifactId>
+            <version>1.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
